style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', system-ui;
    color: #243e63;
}

html {
    scroll-behavior: smooth;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.row__narrow {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
}

.container {
    padding: 96px 0;
}

a {
    display: inline;
    text-decoration: none;
}

img {
    width: 100%;
    /*overflow-clip-margin: content-box;
    overflow: clip; */
}

h1 {
    font-size: 48px;
    color: #1a202c;
    line-height: 1.25;
}

.purple {
    color: #6415ff;
}

p {
    font-size: 18px;
    line-height: 1.5;
    /*display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    unicode-bidi: isolate;*/
}

li {
    list-style-type: none;
}

.row {
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
}

.row__narrow {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
}

.container {
    padding: 96px 0;
}


section {
    padding: 0 32px;
}

.section__title {
  font-size: 48px;
  font-weight: 900;
  color: rgb(36, 62, 99);
  line-height: 1.5;
  margin: 16px 0;
  letter-spacing: 0.025em;
}

main {
    margin-bottom: 96px;
}


.btn {
    background-color: #6415ff;
    padding: 12px 32px;
    border: none;
    border-radius: 500px;
    font-size: 14px;
    color: #fff;
    font-weight: bold;
    transition: all 300ms ease;
}


.btn:hover {
    background-color: rgba(80, 17, 204);
}

button {
    cursor: pointer;
    border: none;
}


/* 

NAVBAR ↓

*/


nav {
    height: 100px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 32px;
}

.nav__link--list {
    display: flex;
}

.nav__link--anchor {
    margin: 0 12px;
    color: #242424;
    text-decoration: none;
    font-size: 700;
}

.nav__link--anchor-primary {
    background-color: #6030b1;
    padding: 8px 16px;
    border-radius: 50px;
    color: white;
    transition: all 300ms ease;
}

.nav__link--anchor-primary:hover {
    background-color: #5d3eff;
}

.nav__logo--img {
    height: 40px;
    width: 40px;
}

.nav__row {
    display: flex;
    justify-content: space-between;
}

.nav__logo {
    display: flex;
    align-items: center;
    margin: 8px 0;
    padding-bottom: 4px;
}

.nav__logo--title {
    font-weight: 900;
    font-size: 24px;
    margin-left: 12px;
    padding-bottom: 2px;
    letter-spacing: 0.6px;
}


.btn__menu {
    display: none;
    background: transparent;
    border: none;
    transition: all 300ms ease;
}

.btn__menu--svg:hover {
    filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 378px;
    margin: 24px 16px;
    padding: 32px;
    background-color: #fff;
    border: 1px solid rgb(229, 231, 235);
    border-radius: 8px;
    z-index: 4;
    visibility: hidden;
    opacity: 0;
    transform: translateX(300%);
    transition: all 300ms ease;
}

.modal__links {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal__link {
    color: #1a202c;
    font-size: 18px;
    font-weight: 600;
    line-height: 1.5;
    margin: 8px 0;
    padding-bottom: 4px;
    border-bottom: 2px solid transparent;
}

.modal__link--primary {
    color: #f7fafc;
    padding: 12px 32px;
    background: #6415ff;
    border-radius: 500px;
    border: none;
}

.menu--open .modal {
    visibility: visible;
    opacity: 1;
    transform: translateX(0);
}

.btn__menu--close {
    position: fixed;
    top: 24px;
    right: 18px;
}


/* 

HEADER / ABOUT US ↓

*/


header .row {
    display: flex;
    align-items: center;
    justify-content: space-between;
}


.header__description {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.header__description--title {
    font-size: 36px;
}

.header__description--para {
    font-size: 16px;
    margin: 32px 0;
}

.header__email {
    width: 100%;
    max-width: 448px;
    height: 68px;
    position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.header__email--input {
    width: 100%;
    border-radius: 500px;
    border: 2px solid rgb(229, 231, 235);
    padding: 20px 192px 20px 32px;
    font-size: 16px;
    font-weight: 500;
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 1;
    transition: border-color 300ms;
}

.header__email--btn {
    z-index: 2;
    margin: 8px;
    height: calc(100% - 16px);
    border-radius: 500px;
    width: 160px;
    border: none;
    background-color: #6415ff;
    color: #fff;
    font-weight: 700;
    font-size: 16px;
    transition: all 300ms ease;
}

.header__customers {
    margin-top: 16px;
    padding-left: 128px;
    opacity: 0.5;
}

.header__customers--title {
    display: flex;
    color: #a0aec0;
    font-size: 12px;
    font-weight: 700;
    margin-top: 28px;
    justify-content: center;
    align-items: center;
}

.header__img--wrapper {
    width: 50%;
    box-sizing: border-box;
    display: flex;
    margin: 0 auto;
}


/* 

FEATURES ↓

*/


#features {
    position: relative;
}

#features .row__narrow {
    display: flex;
    flex-direction: column;
    align-items: center;
}


/* 

QUALITY WORK ↓

*/


#quality .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


/* 

STEPS ↓

*/


#steps .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


/* 

VALUES ↓

*/

#values .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
/* ... */

